Added login with Google and Mongo Controller shell

--- a/HomeHistory.Web/appsettings.json
+++ b/HomeHistory.Web/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MongoDatabase": {
+    "ConnectionString": "mongodb+srv://homeHistoryWeb:hhWeb2424@hhmongocluster.xccmy.mongodb.net?retryWrites=true&w=majority",
+    "DatabaseName": "ATTOM",
+    "BooksCollectionName": "Properties"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
